--- a/src/style.css
+++ b/src/style.css
@@ -21,11 +21,12 @@
 
 .btn{
     margin-top: 40px;
-    width: 230px;
-    height: 50px;
+    width: 250px;
+    height: 60px;
     font-size: 18px;
     color: #dd7b22;
     border-radius: 25px;
     border-color: #dd7b22;
     background-color: white;
+    cursor: pointer;
 }
